--- a/src/supervisord.conf
+++ b/src/supervisord.conf
@@ -12,7 +12,7 @@ stopsignal=INT
 stopwaitsecs=5
 
 [program:python_fastapi]
-command=python api.py %(ENV_HOST)s --add_margins %(ENV_MARGIN)s
+command=python api.py
 autostart=true
 autorestart=true
 stderr_logfile=/dev/stdout
